fix thunderbird overflow issue

--- a/scss/components/_normalize.scss
+++ b/scss/components/_normalize.scss
@@ -44,6 +44,10 @@ body {
 	width: 100%;
 }
 
+.moz-text-html table[align="left"] {
+	float: initial;
+}
+
 #backgroundTable {
   margin: 0;
   Margin: 0;
